# django-admin-mazer

./: .gitignore  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.cfg
django_admin_mazer/: apps.py
django_admin_mazer/templates/admin/: actions.html  app_index.html  app_list.html  base.html  base_site.html  change_form.html  change_form_object_tools.html  change_list.html  change_list_object_tools.html  change_list_results.html  delete_confirmation.html  delete_selected_confirmation.html  index.html  login.html  nav_sidebar.html  object_history.html  popup_response.html  submit_line.html
django_admin_mazer/templates/admin/auth/user/: change_password.html
django_admin_mazer/templates/admin/includes/: fieldset.html  object_delete_summary.html
django_admin_mazer/templates/registration/: password_change_form.html
django_admin_mazer/templates/static/assets/css/: app.css
django_admin_mazer/templatetags/: django_admin_mazer.py
